--- a/MasterPage.master
+++ b/MasterPage.master
@@ -265,6 +265,9 @@
           
             <li>
                 <a class="dropdown-toggle"  href="#">Product Management</a>
+                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover"">
+                    <li><a href="../../../UIProductManagement/HowSystemsWork.aspx ">How Systems Work</a></li>
+                </ul>
             </li>
              <li>
                 <a href="#" class="dropdown-toggle">Entrepreneurship</a>
