--- a/MasterPage.master
+++ b/MasterPage.master
@@ -91,6 +91,10 @@
 
              <li>
                 <a href="#" class="dropdown-toggle">Math Fun</a>
+                  <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover"">
+                    <li><a href="../../../UIMathFun/MathPuzzles.aspx ">Mathematics Puzzles</a></li>
+                    <li><a href="../../../UIMathFun/InterestingFactsAboutPI.aspx ">Facts About PI</a></li>
+                </ul>
             </li>
               <li>
                 <a href="#" class="dropdown-toggle">Music</a>
