--- a/MasterPage.master
+++ b/MasterPage.master
@@ -313,7 +313,7 @@
                             <h3 class="fg-white text-shadow">Follow Me</h3>
                             <a class="icon-blogger on-right on-left" href ="http://gopalakrishnaiitb.blogspot.in/" style="background: orange;color: white; padding: 10px; border-radius: 50%"></a>
                             <a class="icon-blogger on-right on-left" href ="http://gopalakrishnatech.blogspot.in/" style="background: red;color: white; padding: 10px; border-radius: 50%"></a>
-                            <a class="icon-facebook on-right on-left" href ="https://www.facebook.com/gopalakrishna.iitb" style="background: blue;color: white; padding: 10px; border-radius: 50%"></a>
+                            <a class="icon-facebook on-right on-left" href ="https://www.facebook.com/subtlegopala" style="background: blue;color: white; padding: 10px; border-radius: 50%"></a>
                             <a class="icon-linkedin on-right on-left" href ="https://www.linkedin.com/profile/view?id=97684873&trk=nav_responsive_tab_profile" style="background: magenta;color: white; padding: 10px; border-radius: 50%"></a>
 
                             <h3 class="fg-white text-shadow">Contact Me</h3>
@@ -323,7 +323,7 @@
                             <a class="icon-skype on-right on-left" href ="skype:gopala.krishna_1" style="background: skyblue;color: white; padding: 10px; border-radius: 50%"></a>
                            
                              <h3 class="fg-white text-shadow"> Like & Share</h3>
-                             <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgeekgopalakrishna.com%2F&amp;width=200&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:21px;" allowTransparency="true"></iframe>
+                             <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fsubtlegopalweb.com%2F&amp;width=200&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:21px;" allowTransparency="true"></iframe>
                         </div>
 
                         <div class="span6 padding5">
