Added algoritms section

--- a/MasterPage.master
+++ b/MasterPage.master
@@ -153,6 +153,17 @@
                 <a class="dropdown-toggle"  href="#">Technology</a>
 
                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+
+                     <li>
+                            <a href="#" class="dropdown-toggle">Algorithms</a>
+                            <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                <li><a href="../docs/Technology/Algorithms/AlgorithmsDesign.docx">Getting Started</a></li>
+                                <li><a href="" style ="color: gray">C# Code</a></li>
+                                <li><a href="" style ="color: gray">Books</a></li>
+                                <li><a href="" style ="color: gray">Favorite Links</a></li>
+                            </ul>
+                        </li>
+
                    
                      <li>
                         <a href="#" class="dropdown-toggle">Open Source</a>
@@ -337,7 +348,7 @@
                         <a href="#" class="dropdown-toggle">Start a Startup</a>
                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                             <li><a href="" style = "color:gray">How To Start A Company</a></li>
-                            <li><a href="http://www.subtlegopalweb.com/docs/StartupGuide.pdf">Startup Guide</a></li>
+                            <li><a href="http://www.subtlegopalweb.com/docs/Entrepreneurship/StartupGuide.pdf">Startup Guide</a></li>
                         </ul>
                     </li>
                     <li>
