--- a/MasterPage.master
+++ b/MasterPage.master
@@ -357,8 +357,7 @@
                     <li>
                         <a href="#" class="dropdown-toggle">Startup Resources</a>
                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
-                            <%--<li><a href="../../../UIEntrepreneurship/StartupResources/ImpBooks.aspx">Important Books</a></li>--%>
-                            <li><a href="" style = "color:gray">Other Books</a></li>
+                            <li><a href="../../../UIEntrepreneurship/StartupResources/ImpBooks.aspx">Imp Books</a></li>
                             <li><a href="" style = "color:gray">Blogs</a></li>
                         </ul>
                     </li>
