--- a/MasterPage.master
+++ b/MasterPage.master
@@ -173,7 +173,7 @@
                             <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                 <li><a href="../docs/Technology/Algorithms/AlgorithmsDesign.docx">Getting Started</a></li>
                                 <li><a href="../docs/Technology/Algorithms/Algorithms.zip">C# Code</a></li>
-                                <li><a href="" style ="color: gray">Books</a></li>
+                                <li><a href="../../../UITechnology/Algorithms/AlgorithmsImpBooks.aspx" style ="color: gray">Books</a></li>
                                 <li><a href="" style ="color: gray">Favorite Links</a></li>
                             </ul>
                         </li>
