--- a/MasterPage.master
+++ b/MasterPage.master
@@ -161,7 +161,7 @@
                             <a href="#" class="dropdown-toggle">Algorithms</a>
                             <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                 <li><a href="../docs/Technology/Algorithms/AlgorithmsDesign.docx">Getting Started</a></li>
-                                <li><a href="" style ="color: gray">C# Code</a></li>
+                                <li><a href="../docs/Technology/Algorithms/Algorithms.zip">C# Code</a></li>
                                 <li><a href="" style ="color: gray">Books</a></li>
                                 <li><a href="" style ="color: gray">Favorite Links</a></li>
                             </ul>
@@ -423,22 +423,22 @@
                          </div>
 
                         <div class="span3 padding0">
-                            <a class="button bg-green fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Microsoft.NET</a>
-                            <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Windows 8</a>
+                            <a class="button bg-green fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UITechnology/TechnologyStacks/WebTechStackSearch.aspx">Microsoft.NET</a>
+                            <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UITechnology/TechnologyStacks/WebTechStackSearch.aspx">Windows 8</a>
                             <a class="button bg-red fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Hacking</a>
                             <a class="button bg-pink fg-white" style="width: 100%; margin-bottom: 5px" href=" ">BigData</a>
-                            <a class="button bg-orange fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Product Management</a>
-                            <a class="button bg-magenta fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Mobile Device Management</a>
-                            <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Cross Platform Technologies</a>
+                            <a class="button bg-orange fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UIProductManagement/HowSystemsWork.aspx">Product Management</a>
+                            <a class="button bg-magenta fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UIProductManagement/HowSystemsWork.aspx">System Internals</a>
+                            <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UIProductManagement/HowSystemsWork.aspx">Cross Platform Technologies</a>
                         </div>
 
                         <div class="span3 padding0">
-                        <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Frameworks Design</a>
-                            <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Windows Internals</a>
-                            <a class="button bg-pink fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Web Scalability Design</a>
-                            <a class="button bg-magenta fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Website Design</a>
-                            <a class="button bg-orange fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Mathematics</a>
-                            <a class="button bg-red fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Photography</a>
+                        <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UIProductManagement/HowSystemsWork.aspx">Frameworks Design</a>
+                            <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UIProductManagement/HowSystemsWork.aspx">Windows Internals</a>
+                            <a class="button bg-pink fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UIProductManagement/HowSystemsWork.aspx">Web Scalability Design</a>
+                            <a class="button bg-magenta fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UIProductManagement/HowSystemsWork.aspx">How Systems Work</a>
+                            <a class="button bg-orange fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UIMathFun/MathPuzzles.aspx">Mathematics</a>
+                            <a class="button bg-red fg-white" style="width: 100%; margin-bottom: 5px" href="http://localhost:53295/UIMyPersonal/Photos/MyPhotos.aspx">Photography</a>
                             <a class="button bg-green fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Social Psychology</a>>
                     </div>
 
