--- a/MasterPage.master
+++ b/MasterPage.master
@@ -99,6 +99,17 @@
                             <li><a href="../../../UIInterestingStuff/InterestingOpticalIllusions/InterestingOpticalIllusions.aspx">Can We Believe Our Eyes?</a></li>
                         </ul>
                     </li>
+                    <li>
+                <a class="dropdown-toggle " href ="#">Misc</a>
+                <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                    <li>
+                        <a href="#" class="dropdown-toggle">Readings</a>
+                        <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                            <li><a href="">Telugu Novels</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
                 </ul>
             </li>
 
@@ -364,6 +375,9 @@
                 </ul>
             </li>
 
+             
+
+
 
 
 
@@ -372,6 +386,7 @@
                 <a href="#" class="dropdown-toggle">GuestBook</a>
                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover"">
                     <li><a href="../../../UIGuestbook/Guestbook.aspx ">Sign In GuestBook</a></li>
+
                 </ul>
             </li>
             <li>
