--- a/MasterPage.master
+++ b/MasterPage.master
@@ -438,24 +438,25 @@
                          </div>
 
                         <div class="span3 padding0">
-                            <a class="button bg-green fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UITechnology/TechnologyStacks/WebTechStackSearch.aspx">Microsoft.NET</a>
-                            <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UITechnology/TechnologyStacks/WebTechStackSearch.aspx">Windows 8</a>
-                            <a class="button bg-red fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Hacking</a>
-                            <a class="button bg-pink fg-white" style="width: 100%; margin-bottom: 5px" href=" ">BigData</a>
-                            <a class="button bg-orange fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UIProductManagement/HowSystemsWork.aspx">Product Management</a>
-                            <a class="button bg-magenta fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UIProductManagement/HowSystemsWork.aspx">System Internals</a>
-                            <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UIProductManagement/HowSystemsWork.aspx">Cross Platform Technologies</a>
+                            <a class="button bg-green fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Product Management</a>
+                            <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Growth Hacking</a>
+                            <a class="button bg-green fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Monetzation Strategies</a>
+                            <a class="button bg-red fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Why Products Fail</a>
+                            <a class="button bg-magenta fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Objectivism-Irrationality</a>
+                            <a class="button bg-pink fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Business Strategy</a>
+                            <a class="button bg-orange fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Consumer Behaviour</a>
                         </div>
 
                         <div class="span3 padding0">
-                        <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UIProductManagement/HowSystemsWork.aspx">Frameworks Design</a>
-                            <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UIProductManagement/HowSystemsWork.aspx">Windows Internals</a>
-                            <a class="button bg-pink fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UIProductManagement/HowSystemsWork.aspx">Web Scalability Design</a>
-                            <a class="button bg-magenta fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UIProductManagement/HowSystemsWork.aspx">How Systems Work</a>
-                            <a class="button bg-orange fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UIMathFun/MathPuzzles.aspx">Mathematics</a>
-                            <a class="button bg-red fg-white" style="width: 100%; margin-bottom: 5px" href="http://subtlegopalweb.com/UIMyPersonal/Photos/MyPhotos.aspx">Photography</a>
-                            <a class="button bg-green fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Social Psychology</a>>
+                            <a class="button bg-magenta fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Product Marketing</a>
+                            <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Counter-Intuitive Strategies</a>
+                            <a class="button bg-red fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Engagement Strategies</a>
+                            <a class="button bg-orange fg-white" style="width: 100%; margin-bottom: 5px" href=" ">How Products Work</a>
+                            <a class="button bg-pink fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Scaling Systems</a>
+                           <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Frameworks Design</a>
+                            <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Windows Internals</a>
                     </div>
+
 
                     </div>
                 </div>
