--- a/MasterPage.master
+++ b/MasterPage.master
@@ -70,6 +70,7 @@
                             <li><a href="../../../UIMyPersonal/AboutMe/AboutMe.aspx">My Timeline</a></li>
                             <li><a href="../../../UIMyPersonal/AboutMe/MyInterests.aspx">My Interests</a></li>
                             <li><a href="../../../UIMyPersonal/AboutMe/MyProfession.aspx">My Profession</a></li>
+                            <li><a href="../../../UIMyPersonal/AboutMe/MyProductPage.aspx">My Product Page</a></li>
                             <li><a href="" style ="color: gray">My Family</a></li>
                         </ul>
                     </li>
