--- a/MasterPage.master
+++ b/MasterPage.master
@@ -388,7 +388,7 @@
                 </ul>
             </li>
             <li>
-            <a href ="../../../Search.aspx"><span class ="icon-search bg-dark fg-white" /></a>
+            <%--<a href ="../../../Search.aspx"><span class ="icon-search bg-dark fg-white" /></a>--%>
        
             </li>
             
