--- a/MasterPage.master
+++ b/MasterPage.master
@@ -339,6 +339,7 @@
                 <a class="dropdown-toggle"  href="#">Product Management</a>
                  <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover"">
                     <li><a href="../../../UIProductManagement/HowSystemsWork.aspx ">How Systems Work</a></li>
+                    <li><a href="../../../UIProductManagement/MyPMArticles.aspx ">My PM Articles</a></li>
                     <li><a href="../../../UIProductManagement/InterestingBugs.aspx ">Interesting Bugs</a></li>
                 </ul>
             </li>
