--- a/MasterPage.master
+++ b/MasterPage.master
@@ -3,7 +3,7 @@
 
 <html>
     <head runat="server">
-     <link rel ="SHORTCUT ICON" href="/images/MyPhotos/1.jpg" />
+     <link rel ="SHORTCUT ICON" href="/images/GKWebLogo.jpg" />
        
      <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
