--- a/MasterPage.master
+++ b/MasterPage.master
@@ -96,7 +96,7 @@
                         </ul>
                     </li>
                     <li>
-                <a class="dropdown-toggle " href ="#">Misc</a>
+               <%-- <a class="dropdown-toggle " href ="#">Misc</a>
                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                     <li>
                         <a href="#" class="dropdown-toggle">Readings</a>
@@ -104,7 +104,7 @@
                             <li><a href="../../../../UIInterestingStuff/Misc/Readings/TeluguNovels.aspx">Telugu Novels</a></li>
                         </ul>
                     </li>
-                </ul>
+                </ul>--%>
             </li>
                 </ul>
             </li>
