--- a/MasterPage.master
+++ b/MasterPage.master
@@ -89,7 +89,7 @@
                             <li>
                                 <a href="#" class="dropdown-toggle">Interesting Facts</a>
                                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
-                                    <li><a href="../../../UIInterestingStuff/InterstingFacts/InterestingScienceFacts.aspx">Interesting Facts</a></li>
+                                    <li><a href="../../../UIInterestingStuff/InterstingFacts/InterestingScienceFacts.aspx">Science Facts</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -132,7 +132,7 @@
                                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                     <li><a href="../../../UIMusic/Ilaiyaraja/AboutIlaiyaraja.aspx">About Ilaiyaraja</a></li>
                                     <li><a href="../../../UIMusic/Ilaiyaraja/BackgroundScores.aspx">Background Scores</a></li>
-                                    <li><a href="../../../UIMusic/Ilaiyaraja/InterestingSongs.aspx">Interesing Songs</a></li>
+                                    <li><a href="../../../UIMusic/Ilaiyaraja/InterestingSongs.aspx">Interesting Songs</a></li>
                                     <li><a href="" style="color: gray">Favorite Links</a></li>
                                 </ul>
                             </li>
