--- a/MasterPage.master
+++ b/MasterPage.master
@@ -278,6 +278,9 @@
                                     <li>
                                         <a href="http://subtlegopala.com/docs/Technology/Hacking/8PowerfulLinkedInHacks.pdf">LinkedIn Hacks</a>
                                     </li>
+                                    <li>
+                                        <a href="http://subtlegopala.com/docs/Technology/Hacking/MoviePiracy.pdf">Movie Piracy</a>
+                                    </li>
                                 </ul>
                             </li>
 
