--- a/MasterPage.master
+++ b/MasterPage.master
@@ -171,7 +171,7 @@
                                 <a href="#" class="dropdown-toggle">Algorithms</a>
                                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                     <li><a href="../docs/Technology/Algorithms/AlgorithmsDesign.pdf">Getting Started</a></li>
-                                    <li><a href="../docs/Technology/Algorithms/Algorithms.zip">C# Code</a></li>
+                                    <%--<li><a href="../docs/Technology/Algorithms/Algorithms.zip">C# Code</a></li>--%>
                                     <li><a href="../../../UITechnology/Algorithms/ImpBooks.aspx">Books</a></li>
                                     <%--                                <li><a href="" style ="color: gray">Favorite Links</a></li>--%>
                                 </ul>
