--- a/MasterPage.master
+++ b/MasterPage.master
@@ -173,7 +173,7 @@
                                     <li><a href="../docs/Technology/Algorithms/AlgorithmsDesign.pdf">Getting Started</a></li>
                                     <%--<li><a href="../docs/Technology/Algorithms/Algorithms.zip">C# Code</a></li>--%>
                                     <li><a href="../../../UITechnology/Algorithms/ImpBooks.aspx">Books</a></li>
-                                    <%--                                <li><a href="" style ="color: gray">Favorite Links</a></li>--%>
+                                    <%--<li><a href="" style ="color: gray">Favorite Links</a></li>--%>
                                 </ul>
                             </li>
 
@@ -363,6 +363,7 @@
                                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                     <%--<li><a href="" style = "color:gray">How To Start A Company</a></li>--%>
                                     <li><a href="http://www.subtlegopala.com/docs/Entrepreneurship/StartupGuide.pdf">Startup Guide</a></li>
+                                    <li><a href="https://www.youtube.com/channel/UCxIJaCMEptJjxmmQgGFsnCg">Stanford Lectures</a></li>
                                 </ul>
                             </li>
                             <li>
