--- a/MasterPage.master
+++ b/MasterPage.master
@@ -28,8 +28,8 @@
     <%--    <link href="css/gridstyle/kendo.silver.min.css" rel="stylesheet">--%>
     <%--<link href="css/gridstyle/kendo.bootstrap.min.css" rel="stylesheet">--%>
     <link href="css/gridstyle/sprite.png" rel="icon">
-   
-    
+
+
 
 
     <!-- Load JavaScript Libraries -->
@@ -276,14 +276,24 @@
                                 <a href="#" class="dropdown-toggle">Hacking</a>
                                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                     <li>
+                                        <a href="#" class="dropdown-toggle">Mac</a>
+                                        <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li>
+                                                <a href="http://subtlegopala.com/docs/Technology/Hacking/MacHackingUltimateGuide.pdf">Complete Guide</a>
+                                            </li>
+                                            <li>
+                                                <a href="http://subtlegopala.com/docs/Technology/Hacking/HackAMac.pdf">Hack a Mac</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
                                         <a href="http://subtlegopala.com/docs/Technology/Hacking/8PowerfulLinkedInHacks.pdf">LinkedIn Hacks</a>
                                     </li>
                                     <li>
                                         <a href="http://subtlegopala.com/docs/Technology/Hacking/MoviePiracy.pdf">Movie Piracy</a>
                                     </li>
-                                    <li>
-                                        <a href="http://subtlegopala.com/docs/Technology/Hacking/HackAMac.pdf">Hack a Mac</a>
-                                    </li>
+                                    
+
                                     <li>
                                         <a href="https://null-byte.wonderhowto.com/how-to/4-ways-crack-facebook-password-protect-yourself-from-them-0139532/">Hack Facebook</a>
                                     </li>
@@ -434,7 +444,7 @@
                             <a class="icon-phone on-right on-left" href="tel:918978556611" style="background: orange; color: white; padding: 10px; border-radius: 50%"></a>
                             <a class="icon-mail on-right on-left" href="mailto:gopala.krishna@outlook.com" style="background: green; color: white; padding: 10px; border-radius: 50%"></a>
                             <a class="icon-location on-right on-left" href="https://www.google.co.in/maps/place/Hyderabad" style="background: yellow; color: white; padding: 10px; border-radius: 50%"></a>
-                            <a class="icon-skype on-right on-left" href="skype:gopala.krishna_1" style="background:skyblue; color:white; padding: 10px; border-radius: 50%"></a>
+                            <a class="icon-skype on-right on-left" href="skype:gopala.krishna_1" style="background: skyblue; color: white; padding: 10px; border-radius: 50%"></a>
 
                             <h3 class="fg-white text-shadow">Like & Share</h3>
                             <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fsubtlegopala.com%2F&amp;width=200&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="border: none; overflow: hidden; width: 200px; height: 21px;" allowtransparency="true"></iframe>
@@ -491,13 +501,15 @@
 
 <%--Google analytics tracking--%>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-58426798-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-58426798-1', 'auto');
+    ga('send', 'pageview');
 
 </script>
 
