--- a/MasterPage.master
+++ b/MasterPage.master
@@ -57,7 +57,7 @@
 </head>
 <body class="metro" style="background-color: black">
     <form id="form1" runat="server">
-        <div class="navigation-bar dark">
+        <div class="navigation-bar fixed-top dark">
             <div class="navigation-bar-content container">
                 <a href="/" class="element"><span class="icon-grid-view  fg-blue"></span>GopalaKrishna <sup>2.0</sup></a>
                 <span class="element-divider"></span>
@@ -72,7 +72,7 @@
                                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                     <li><a href="../../../UIMyPersonal/AboutMe/AboutMe.aspx">My Timeline</a></li>
                                     <li><a href="../../../UIMyPersonal/AboutMe/MyInterests.aspx">My Interests</a></li>
-                                    <li><a href="" style="color: gray">My Family</a></li>
+                                    <%--<li><a href="" style="color: gray">My Family</a></li>--%>
                                 </ul>
                             </li>
                             <li>
