--- a/MasterPage.master
+++ b/MasterPage.master
@@ -278,9 +278,9 @@
                                     <li>
                                         <a href="#" class="dropdown-toggle">Macintosh Hacks</a>
                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
-                                           <%-- <li>
-                                                <a href="http://subtlegopala.com/docs/Technology/Hacking/MacintoshHacks/MacHackingUltimateGuide.pdf">Ultimate Guide</a>
-                                            </li>--%>
+                                            <li>
+                                                <a href="../../../docs/Technology/Hacking/MacintoshHacks/MacHackingUltimateGuide.pdf">Ultimate Guide</a>
+                                            </li>
                                             <li>
                                                 <a href="http://subtlegopala.com/docs/Technology/Hacking/MacintoshHacks/HackAMac.pdf">Hack a Mac</a>
                                             </li>
